fix: bug info button

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -96,18 +96,21 @@
         <div class="o-container">
           <h1 class="c-title">Let's play &#128512;</h1>
           <div class="c-games">
-            <button class="c-game o-button-reset js-selected-game" data-game="bluevsred">
-              <div class="c-game__icon">
-                <svg class="c-icon--lg" width="77" height="77" viewBox="0 0 77 77">
-                  <g transform="translate(-286.5 -347.5)">
-                    <g transform="translate(288.308 349.308)">
-                      <path d="M37,0h0a0,0,0,0,1,0,0V74a0,0,0,0,1,0,0h0A37,37,0,0,1,0,37v0A37,37,0,0,1,37,0Z" transform="translate(-0.308 -0.308)" fill="#f33" stroke="#919799" stroke-width="3" />
-                      <path d="M0,0H0A37,37,0,0,1,37,37v0A37,37,0,0,1,0,74H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36.692 -0.308)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
+            <div class="c-game">
+              <button class="c-game__body o-button-reset js-selected-game" data-game="bluevsred">
+                <div class="c-game__icon">
+                  <svg class="c-icon--lg" width="77" height="77" viewBox="0 0 77 77">
+                    <g transform="translate(-286.5 -347.5)">
+                      <g transform="translate(288.308 349.308)">
+                        <path d="M37,0h0a0,0,0,0,1,0,0V74a0,0,0,0,1,0,0h0A37,37,0,0,1,0,37v0A37,37,0,0,1,37,0Z" transform="translate(-0.308 -0.308)" fill="#f33" stroke="#919799" stroke-width="3" />
+                        <path d="M0,0H0A37,37,0,0,1,37,37v0A37,37,0,0,1,0,74H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36.692 -0.308)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
+                      </g>
                     </g>
-                  </g>
-                </svg>
-              </div>
-              <div class="c-game__info-btn js-info-btn" data-game="bluevsred">
+                  </svg>
+                </div>
+                <div class="c-game__title">BLUE VS RED</div>
+              </button>
+              <button class="c-game__info-btn js-info-btn o-button-reset" data-game="bluevsred">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
@@ -119,21 +122,24 @@
                   <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
-              </div>
-              <div class="c-game__title">BLUE VS RED</div>
-            </button>
-            <button class="c-game o-button-reset js-selected-game" data-game="zengame">
-              <div class="c-game__icon">
-                <svg class="c-icon--lg u-color-zen-game" width="24" height="24" viewBox="0 0 48 48" fill="none">
-                  <circle cx="24" cy="28" r="16" fill="none" stroke-width="2" />
-                  <path d="M28 4L20 4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M24 4V12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M35 16L38 13" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M24 28V22" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M24 28H18" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-              </div>
-              <div class="c-game__info-btn js-info-btn" data-game="zengame">
+              </button>
+            </div>
+            <div class="c-game">
+              <button class="c-game__body o-button-reset js-selected-game" data-game="zengame">
+                <div class="c-game__icon">
+                  <svg class="c-icon--lg u-color-zen-game" width="24" height="24" viewBox="0 0 48 48" fill="none">
+                    <circle cx="24" cy="28" r="16" fill="none" stroke-width="2" />
+                    <path d="M28 4L20 4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M24 4V12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M35 16L38 13" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M24 28V22" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M24 28H18" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </div>
+
+                <div class="c-game__title">ZEN GAME</div>
+              </button>
+              <button class="c-game__info-btn js-info-btn o-button-reset" data-game="zengame">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
@@ -145,27 +151,29 @@
                   <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
-              </div>
-              <div class="c-game__title">ZEN GAME</div>
-            </button>
-            <button class="c-game o-button-reset js-selected-game" data-game="minesweeper">
-              <div class="c-game__icon u-color-mine-sweeper">
-                <svg class="c-icon--lg" width="24" height="24" viewBox="0 0 48 48" fill="none">
-                  <path
-                    d="M11.2632 44L14.6271 35.6852C10.031 32.5934 7 27.2927 7 21.2727C7 11.7333 14.6112 4 24 4C33.3888 4 41 11.7333 41 21.2727C41 27.2927 37.969 32.5934 33.3729 35.6852L36.7368 44H11.2632Z"
-                    fill="none"
-                    stroke-width="2"
-                    stroke-linejoin="round"
-                  />
-                  <path d="M20 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M28 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M17 23C18.6569 23 20 21.6569 20 20C20 18.3431 18.6569 17 17 17C15.3431 17 14 18.3431 14 20C14 21.6569 15.3431 23 17 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
-                  <path d="M31 23C32.6569 23 34 21.6569 34 20C34 18.3431 32.6569 17 31 17C29.3431 17 28 18.3431 28 20C28 21.6569 29.3431 23 31 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
-                  <path d="M32 44H24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M24 44H16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-              </div>
-              <div class="c-game__info-btn js-info-btn" data-game="minesweeper">
+              </button>
+            </div>
+            <div class="c-game">
+              <button class="c-game__body o-button-reset js-selected-game" data-game="minesweeper">
+                <div class="c-game__icon u-color-mine-sweeper">
+                  <svg class="c-icon--lg" width="24" height="24" viewBox="0 0 48 48" fill="none">
+                    <path
+                      d="M11.2632 44L14.6271 35.6852C10.031 32.5934 7 27.2927 7 21.2727C7 11.7333 14.6112 4 24 4C33.3888 4 41 11.7333 41 21.2727C41 27.2927 37.969 32.5934 33.3729 35.6852L36.7368 44H11.2632Z"
+                      fill="none"
+                      stroke-width="2"
+                      stroke-linejoin="round"
+                    />
+                    <path d="M20 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M28 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M17 23C18.6569 23 20 21.6569 20 20C20 18.3431 18.6569 17 17 17C15.3431 17 14 18.3431 14 20C14 21.6569 15.3431 23 17 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
+                    <path d="M31 23C32.6569 23 34 21.6569 34 20C34 18.3431 32.6569 17 31 17C29.3431 17 28 18.3431 28 20C28 21.6569 29.3431 23 31 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
+                    <path d="M32 44H24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M24 44H16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </div>
+                <div class="c-game__title">MINE SWEEPER</div>
+              </button>
+              <button class="c-game__info-btn js-info-btn o-button-reset" data-game="minesweeper">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
@@ -177,23 +185,25 @@
                   <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
-              </div>
-              <div class="c-game__title">MINE SWEEPER</div>
-            </button>
-            <button class="c-game o-button-reset js-selected-game" data-game="memorygame">
-              <div class="c-game__icon">
-                <svg class="c-icon--lg" width="75" height="75" viewBox="0 0 75 75">
-                  <g transform="translate(-254.5 -305.5)">
-                    <g transform="translate(256 307)">
-                      <path d="M36,0h0a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0v0A36,36,0,0,1,36,0Z" fill="#f33" stroke="#919799" stroke-width="3" />
-                      <path d="M0,0H0A36,36,0,0,1,36,36v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
-                      <path d="M0,0H36a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0h0A36,36,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(0 36)" fill="#e5ea49" stroke="#919799" stroke-width="3" />
-                      <path d="M0,0H36a0,0,0,0,1,0,0V0A36,36,0,0,1,0,36H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36 36)" fill="#5ed540" stroke="#919799" stroke-width="3" />
+              </button>
+            </div>
+            <div class="c-game">
+              <button class="c-game__body o-button-reset js-selected-game" data-game="memorygame">
+                <div class="c-game__icon">
+                  <svg class="c-icon--lg" width="75" height="75" viewBox="0 0 75 75">
+                    <g transform="translate(-254.5 -305.5)">
+                      <g transform="translate(256 307)">
+                        <path d="M36,0h0a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0v0A36,36,0,0,1,36,0Z" fill="#f33" stroke="#919799" stroke-width="3" />
+                        <path d="M0,0H0A36,36,0,0,1,36,36v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
+                        <path d="M0,0H36a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0h0A36,36,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(0 36)" fill="#e5ea49" stroke="#919799" stroke-width="3" />
+                        <path d="M0,0H36a0,0,0,0,1,0,0V0A36,36,0,0,1,0,36H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36 36)" fill="#5ed540" stroke="#919799" stroke-width="3" />
+                      </g>
                     </g>
-                  </g>
-                </svg>
-              </div>
-              <div class="c-game__info-btn js-info-btn" data-game="memorygame">
+                  </svg>
+                </div>
+                <div class="c-game__title">MEMORY GAME</div>
+              </button>
+              <button class="c-game__info-btn js-info-btn o-button-reset" data-game="memorygame">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
@@ -205,9 +215,8 @@
                   <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
-              </div>
-              <div class="c-game__title">MEMORY GAME</div>
-            </button>
+              </button>
+            </div>
           </div>
         </div>
       </section>
