--- a/Testing_Zen_Game/testing.html
+++ b/Testing_Zen_Game/testing.html
@@ -30,6 +30,10 @@
         <button class="js-button-game" data-game-id="zen">zen</button>
         <button class="js-button-game" data-game-id="minesweepr">minesweepr</button>
       </div>
+      <div class="button-container">
+        <button class="js-button-action" data-action-id="stop">stop</button>
+        <button class="js-button-action" data-action-id="pauze">pauze</button>
+      </div>
     </div>
   </body>
 </html>
