feat: test pauze buttton redvsblue

--- a/Testing/testing.html
+++ b/Testing/testing.html
@@ -30,11 +30,11 @@
         <button class="js-button-game" data-game-id="zen">zen</button>
         <button class="js-button-game" data-game-id="minesweepr">minesweepr</button>
       </div>
-      <div class="button-container">
+      <div class="button-container button-container-test">
         <button class="js-button-action" data-action-id="stop">stop</button>
         <button class="js-button-action" data-action-id="pauze">pauze</button>
       </div>
     </div>
   </body>
 </html>
- 
+  
