make countdown timer 3sec

--- a/Frontend/form.html
+++ b/Frontend/form.html
@@ -84,7 +84,7 @@
                     <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   </svg>
                 </div>
-                <p class="c-form__info-text">In 'memory game' is de bedoeling dat je de getoonde sequentie van led's zo lang mogelijk probeert na te doen door de juiste paaltjes aan te klikken. Er zal telkens een extra led toegevoegd worden.</p>
+                <p class="c-form__info-text js-form-info-text">In 'memory game' is de bedoeling dat je de getoonde sequentie van led's zo lang mogelijk probeert na te doen door de juiste paaltjes aan te klikken. Er zal telkens een extra led toegevoegd worden.</p>
               </div>
             </div>
           </form>
