--- a/Frontend/live-scorebord.html
+++ b/Frontend/live-scorebord.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live scorebord | Interactieve paaltjes</title>
-    <meta name="description" content="Speel onze interactieve paaltjes">
+    <meta name="description" content="Speel onze interactieve paaltjes" />
 
     <link rel="icon" href="img/logos/favicon.svg" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -17,7 +17,19 @@
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
-<body>
-   <h1>test</h1>
-</body>
+  <body>
+    <div class="c-live">
+      <div class="c-live--red">
+        <p class="c-live__score">0</p>
+      </div>
+      <div class="c-live--blue">
+        <p class="c-live__score">0</p>
+      </div>
+      <div class="c-live__timer">
+        <div class="c-timer">
+          <p class="c-timer__time">00:00</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
