feat: total buttons pressed

--- a/Testing_Memorygame/testing.html
+++ b/Testing_Memorygame/testing.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h1 id="memorypoints">0</h1>
+    <h1 id="totalbuttonspressed">0</h1>
     <div class="container">
       <div class="led-container">
         <div class="led" id="led-1"></div>
