--- a/Testing_RedvsBlue/testing.html
+++ b/Testing_RedvsBlue/testing.html
@@ -33,6 +33,7 @@
       <div class="button-container button-container-test">
         <button class="js-button-action" data-action-id="stop">stop</button>
         <button class="js-button-action" data-action-id="pauze">pauze</button>
+        <button class="js-button-action" data-action-id="unpauze">unpauze</button>
       </div>
     </div>
   </body>
