--- a/Testing_Zen_Game/testing.html
+++ b/Testing_Zen_Game/testing.html
@@ -30,10 +30,12 @@
         <button class="js-button-game" data-game-id="zen">zen</button>
         <button class="js-button-game" data-game-id="minesweepr">minesweepr</button>
       </div>
-      <div class="button-container">
+      <div class="button-container button-container-test">
         <button class="js-button-action" data-action-id="stop">stop</button>
         <button class="js-button-action" data-action-id="pauze">pauze</button>
+        <button class="js-button-action" data-action-id="unpauze">unpauze</button>
       </div>
     </div>
   </body>
 </html>
+   
