feat: test pauze button memory game

--- a/Testing_Memorygame/testing.html
+++ b/Testing_Memorygame/testing.html
@@ -11,7 +11,6 @@
   </head>
   <body>
     <h1 id="memorypoints">0</h1>
-    <h1 id="totalbuttonspressed">0</h1>
     <div class="container">
       <div class="led-container">
         <div class="led" id="led-1"></div>
@@ -31,9 +30,10 @@
         <button class="js-button-game" data-game-id="zen">zen</button>
         <button class="js-button-game" data-game-id="minesweepr">minesweepr</button>
       </div>
-       <div class="button-container">
+      <div class="button-container button-container-test">
         <button class="js-button-action" data-action-id="stop">stop</button>
         <button class="js-button-action" data-action-id="pauze">pauze</button>
+        <button class="js-button-action" data-action-id="unpauze">unpauze</button>
       </div>
     </div>
   </body>
