--- a/Frontend/endscore.html
+++ b/Frontend/endscore.html
@@ -17,7 +17,7 @@
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
-<body>
+<body class="c-endscore-page">
     <div>
         <h3>Score</h3>
         <h2>150</h2>
