--- a/Frontend/form.html
+++ b/Frontend/form.html
@@ -18,7 +18,6 @@
     <script src="script/app.js"></script>
 
     <script src="vendor/lottie-player.js"></script>
-
   </head>
   <body class="js-form-page">
     <main>
@@ -75,7 +74,7 @@
                 </p>
               </div>
               <button class="o-button-reset c-button js-form-start-btn">START NU</button>
-              <div class="c-form__info">
+              <div class="c-form__info u-mb-lg">
                 <div class="c-form__icon">
                   <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                     <path
