--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -87,6 +87,7 @@
                     d="m134.3,56.96c0,3.42,0,6.68,0,9.94,0,.48.03.96-.03,1.43-.11.87-.64,1.34-1.53,1.38-.88.04-1.47-.35-1.67-1.22-.09-.42-.09-.87-.09-1.3,0-3.34,0-6.69,0-10.22-.77,0-1.47.02-2.17,0-1.14-.05-1.74-.6-1.72-1.56.02-.95.62-1.5,1.77-1.5,2.56-.02,5.11,0,7.67,0,1,0,1.6.46,1.66,1.48.06.98-.52,1.54-1.66,1.59-.68.03-1.35,0-2.22,0Z"
                   />
                 </svg>
+                
               </h1>
             </div>
           </div>
@@ -281,8 +282,8 @@
       </section>
     </main>
     <!-- popup -->
-    <div class="c-popup">
-      <div class="c-popup__content">
+    <div class="c-popup js-popup">
+      <div class="c-popup__content js-popup-content">
         <div class="c-popup__header">
           <div class="o-layout o-layout--justify-space-between o-layout--align-baseline">
             <h2 class="c-popup__title js-popup-title">Memory Game</h2>
